adding force = true to catalyze rules

--- a/netlify.toml
+++ b/netlify.toml
@@ -28,11 +28,13 @@
   from = "https://catalyze.io/*"
   to = "https://datica.com/:splat"
   status = 301
+  force = true
 
 [[redirects]]
   from = "https://www.catalyze.io/*"
   to = "https://www.datica.com/:splat"
   status = 301
+  force = true
 
 [[redirects]]
   from = "/platform/integration"
