--- a/netlify.toml
+++ b/netlify.toml
@@ -36,15 +36,15 @@
   status = 301
   force = true
 
-[[redirects]]
-  from = "/platform/integration"
-  to = "/blog/if-its-possible-we-can-integrate-it/"
-  status = 301
+# [[redirects]]
+#   from = "/platform/integration"
+#   to = "/blog/if-its-possible-we-can-integrate-it/"
+#   status = 301
 
-[[redirects]]
-  from = "/integration"
-  to = "/blog/if-its-possible-we-can-integrate-it/"
-  status = 301
+# [[redirects]]
+#   from = "/integration"
+#   to = "/blog/if-its-possible-we-can-integrate-it/"
+#   status = 301
 
 [[redirects]]
   from = "support.catalyze.io"
